apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
